--- a/frontend-next/package.json
+++ b/frontend-next/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@1inch/fusion-sdk": "^2.3.5",
+    "@1inch/limit-order-protocol-utils": "^4.0.1",
     "@1inch/limit-order-sdk": "^5.0.3",
     "dotenv": "^17.2.1",
     "ethers": "^6.8.0",
